--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,24 @@ body{
     padding: 0;
 }
 
+#cabecera{
+    background: #33A;
+    color: white;
+    margin: 0;
+    font-weight: bold;
+    padding: 0.5em;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.75);
+}
+
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container{
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -16,4 +31,8 @@ body{
 
 #container h1{
     font-size: 20px;
+}
+
+#post{
+    padding: 1em;
 }
