--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,5 @@
 body{
-<<<<<<< HEAD
-    color: blue;
-=======
-    color: red;
->>>>>>> cabecera
+    color: gray;
     text-align: center;
     font-family: Arial;
     margin: 0;
