--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body{
+    background: #1e1f24;
     color: gray;
     text-align: center;
     font-family: Arial;
@@ -7,12 +8,19 @@ body{
 }
 
 #cabecera{
-    background: #33A;
+    background: #37488b;
     color: white;
     margin: 0;
     font-weight: bold;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 1em;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.75);
+}
+
+#cabecera #logo {
+    font-weight: normal;
+    font-size: 0.8em;
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline{
@@ -35,4 +43,5 @@ body{
 
 #post{
     padding: 1em;
+    background: white;
 }
